# FibexConverter

./: .gitignore  README.md  configuration_base_classes.py  configuration_to_fros.py  fibex_parser.py  filewriter.py
templates/FROS/flexray_msgs/: CMakeLists.txt  PDU.msg  package.xml
templates/FROS/flexray_msgs_ROS2/: CMakeLists.txt  PDU.msg  package.xml
templates/FROS/ixxat_gw/: CMakeLists.txt  package.xml
templates/FROS/ixxat_gw/include/: ixxat_pkt.h  msgdefs.h  pdudefs.h
templates/FROS/ixxat_gw/launch/: ixxat_gw.launch
templates/FROS/ixxat_gw/src/: datahandler.cpp  datahandler.h  ixxat_gw.cpp
templates/FROS/ixxat_gw_ROS2/: CMakeLists.txt  package.xml
templates/FROS/ixxat_gw_ROS2/include/: msgdefs.h  pdudefs.h
templates/FROS/ixxat_gw_ROS2/launch/: ixxat_gw.launch.py  ixxat_gw_launch.xml
templates/FROS/ixxat_gw_ROS2/src/: datahandler.cpp  datahandler.h  ixxat_gw.cpp
