<?xml version="1.0"?>
<package format="2">.
  <name>flexray_msgs</name>
  <version>0.4.2</version>
  <description>Flexray related message types.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>