<?xml version="1.0"?>
<package format="2">
  <name>ixxat_gw_{{channel_name}}</name>
  <version>0.0.0</version>
  <description>The ixxat_gw_wildcard package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- fROS dependencies -->
  <depend>flexray_msgs</depend>
  <depend>std_msgs</depend>
  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>